--- a/passbook-presentation/src/main/resources/public/index.html
+++ b/passbook-presentation/src/main/resources/public/index.html
@@ -15,6 +15,8 @@
 <script th:inline="javascript">
 /*<![CDATA[*/
     var userName = /*[[${user.name}]]*/ null;
+    var passbookUrlPath = /*[[${passbookUrl}]]*/ null;
+    var passbookId = /*[[${game_id}]]*/ null;
     /*]]>*/
 </script>
 
@@ -44,6 +46,12 @@
 	<div class="container" ng-app="passbookApp">
 
 		<div class="main-content" ng-controller="passbookCtrl">
+
+			<div class="form-group pull-right">
+			
+				<a href="/logout">Logout</a>
+			
+			</div>
 
 			<div class="form-group">
 		<!-- 		<div class="col-sm-1">
@@ -146,7 +154,7 @@
 			<br/>
 			<div class="submit-container form-group">
 				<div class="submit-button col-sm-1">
-					<a class="btn btn-primary" ng-href="{{createPassbook()}}" name="create" >Create</a>
+					<a class="btn btn-primary" ng-href="{{redirectToUpdate()}}" name="create" >Create</a>
 				</div>
 <!-- 
 				<div class="submit-button col-sm-1">
