--- a/passbook-presentation/src/main/resources/public/update.html
+++ b/passbook-presentation/src/main/resources/public/update.html
@@ -43,7 +43,8 @@
 		
 			<div class="form-group pull-right">
 			
-				<a href="/logout">Logout</a>
+			<a href="/">Home</a>
+			<a href="/logout">Logout</a>
 			
 			</div>
 
