--- a/passbook-presentation/src/main/resources/public/register.html
+++ b/passbook-presentation/src/main/resources/public/register.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-	<script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+  <meta name="_csrf" th:content="${_csrf.token}"/>
+  <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+	<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -12,7 +14,14 @@
 <title>Sign up</title>
 
 <script th:inline="javascript">
+	var token = $("meta[name='_csrf']").attr("content");
+	var header = $("meta[name='_csrf_header']").attr("content");
 
+	var config = {
+		headers: {
+			[header]: token
+		}
+	}
     var registerForm = JSON.parse([[${register}]]);
 
 </script>
@@ -27,7 +36,7 @@
 	<hr/>
 	<div class="container" ng-controller="RegisterFormCtrl">
 	<h1>Sign Up Form</h1>
-	<form name="signupform" action="/signup" method="post" enctype="utf8" role="form">
+	<form name="signupform"  enctype="utf8" role="form" ng-submit="submitForm()">
 		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 
 		
  			<div class="form-group">
@@ -64,7 +73,7 @@
 			
 			
 			<label for="gender">Gender</label>
-			<select id="gender" class="form-control" name="gender" ng-model="registerForm.gender" ng-options="gen.value as gen.value for gen in genders"></select> 
+			<select id="gender" class="form-control" name="gender" ng-model="registerForm.gender" ng-options="gen.value as gen.value for gen in genders track by gen.id"></select> 
 			
 			</div>
 			
