--- a/passbook-presentation/src/main/resources/public/index.html
+++ b/passbook-presentation/src/main/resources/public/index.html
@@ -48,6 +48,7 @@
 			<div class="form-group pull-right">
 			
 			<a href="/">Home</a>
+			<a href="/update">Update</a>
 			<a href="/logout">Logout</a>
 			
 			</div>
