--- a/passbook-presentation/src/main/resources/public/index.html
+++ b/passbook-presentation/src/main/resources/public/index.html
@@ -48,7 +48,8 @@
 			<div class="form-group pull-right">
 			
 			<a href="/">Home</a>
-			<a href="/update">Update</a>
+		<!-- 	<a href="/update">Update</a> -->
+			<a href="/updateForm">Update Profile</a>
 			<a href="/logout">Logout</a>
 			
 			</div>
