--- a/passbook-presentation/src/main/resources/public/updateForm.html
+++ b/passbook-presentation/src/main/resources/public/updateForm.html
@@ -12,13 +12,12 @@
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
 <script type="text/javascript" src="app/registerController.js"></script>
-<title>Register Form</title>
+<title>Update Form</title>
 
 <script th:inline="javascript">
 	var token = $("meta[name='_csrf']").attr("content");
 	var header = $("meta[name='_csrf_header']").attr("content");
 	var updateRedirect = $("meta[name='_update_redirect']").attr("content");
-
 	var config = {
 		headers: {
 			[header]: token
@@ -36,8 +35,8 @@
 
 
 	<hr/>
-	<div class="container" ng-controller="RegisterFormCtrl">	
-	<h1 ng-if="!registerFormStatus()">Sign Up Form</h1>
+	<div class="container" ng-controller="RegisterFormCtrl">
+	<h1 ng-if="registerFormStatus()">Update Form</h1>		
 	<form name="signupform"  enctype="utf8" role="form" ng-submit="submitForm()">
 		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 
 		
@@ -80,15 +79,15 @@
 			</div>
 			
 			<div class="form-group">
-			<label ng-if="!registerFormStatus()" for="password">Password</label>
+			<label ng-if="registerFormStatus()" for="password">Change Password</label>
+
 			<input id="password" type="password" class="form-control" name="password" ng-model="registerForm.password" /> 
 			
 			</div>
 			
 			<div class="form-group">
-			
-			<input ng-if="!registerFormStatus()" class="btn btn-primary" type="submit" value="Register" />
 
+			<input ng-if="registerFormStatus()" class="btn btn-primary" type="submit" value="Update" />
 			</div>
 			
 	</form>
