--- a/passbook-presentation/src/main/resources/public/index.html
+++ b/passbook-presentation/src/main/resources/public/index.html
@@ -18,24 +18,14 @@
     /*]]>*/
 </script>
 
+
 	<script>
 	var updatePage = false;
 	</script>
 	<style type="text/css">
-/* 		label{
-			font-size: 20px;
-			color: white;
-		}
-		h3{
-			color: white;
-		}
-
-		h1{
-			color: white;
-		}
-		body{
-			background-color: #CBE32D;
-		} */
+	.has-error{
+		color: #d67d7d;
+	}
 	</style>
 </head>	
 
@@ -72,6 +62,10 @@
 				<div class="golf-course-input-box">
 					<select class="form-control" name="gold_course" ng-model="user.golf_course_selected" ng-options="course as course.courseName for course in data_properties.golf_course_list" ng-change="selectGolfDetails(user.golf_course_selected)"> </select>
 				</div>	
+
+				<div class="golf-course-error">
+					<span class="control-label has-error" ng-show="user.error.golf_course">Please select golf course.</span>
+				</div>
 			</div>
 
 			<div class="form-group">
@@ -148,19 +142,19 @@
 				</div>
 
 				<div class="handicap-input-box">
-					<input class="form-control" name="handicap" ng-model="user.handicap" />
-				</div>	
+					<input class="form-control" type="number" name="handicap" ng-model="user.handicap" />
+				</div>
+				<div class="handicap-error">
+					<span class="control-label has-error" ng-show="user.error.handicap">Please enter number.</span>
+				</div>
 			</div>
 
 			<br/>
 			<div class="submit-container form-group">
 				<div class="submit-button col-sm-1">
-					<a class="btn btn-primary" ng-href="{{redirectToUpdate()}}" name="create" >Create</a>
+					<!-- <a class="btn btn-primary" ng-href="{{redirectToUpdate()}}" name="create" >Create</a> -->
+						<a class="btn btn-primary" ng-click="redirectToUpdate()" name="create" >Create</a>
 				</div>
-<!-- 
-				<div class="submit-button col-sm-1">
-					<a class="btn btn-primary" ng-click="createPassbook1()" name="create" download>Create1</a>
-				</div> -->
 				<div class="clear-button col-sm-1">
 					<button class="btn btn-primary" name="clear" ng-click="clearPassbook()">Clear</button>
 				</div>
