--- a/passbook-presentation/src/main/resources/public/updateForm.html
+++ b/passbook-presentation/src/main/resources/public/updateForm.html
@@ -74,6 +74,9 @@
 			<div class="email-error">
 					<span class="control-label has-error" ng-show="user.error.email">Please enter email address.</span>
 				</div>
+						<div class="email-error">
+					<span class="control-label has-error" ng-show="user.error.emailexist">Email Id already exists.</span>
+				</div>
 			
 			</div>
 
@@ -99,6 +102,10 @@
 				</div>
 			
 			</div>
+
+			<label for="handicap">Handicap</label>
+				<input id="handicap" class="form-control" type="number" name="handicap" ng-model="registerForm.handicap" />
+			</div> 
 			
 			<div class="form-group">
 			<label ng-if="registerFormStatus()" for="password">Change Password</label>
