--- a/passbook-presentation/src/main/resources/public/updateForm.html
+++ b/passbook-presentation/src/main/resources/public/updateForm.html
@@ -103,6 +103,7 @@
 			
 			</div>
 
+			<div class="form-group">
 			<label for="handicap">Handicap</label>
 				<input id="handicap" class="form-control" type="number" name="handicap" ng-model="registerForm.handicap" />
 			</div> 
