--- a/passbook-presentation/src/main/resources/public/update.html
+++ b/passbook-presentation/src/main/resources/public/update.html
@@ -46,7 +46,7 @@
 
 			<div  class="form-group" ng-if="!checkForEmptyPassbook()">
 			
-				<a ng-href="{{createPassbook()}}">Download Passbook</a>
+				<a ng-href="{{createPassbook()}}" ng-click="loader()">Download Passbook</a>
 			
 			</div>
 			<br/>
