--- a/passbook-presentation/src/main/resources/public/login.html
+++ b/passbook-presentation/src/main/resources/public/login.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-touch.min.js"></script>
+	
   <script type="text/javascript" src="app/app.js"></script>
   <script type="text/javascript" src="app/loginController.js"></script>
     <title tiles:fragment="title">Passbook Login Page</title>
